--- a/application_main/CS_21075_7.kv
+++ b/application_main/CS_21075_7.kv
@@ -1,5 +1,5 @@
 <ShoppingHistory>:
-    name: "customer_shopping_history"
+    name: "customer_history"
 
     MDGridLayout:
         cols:1
@@ -13,4 +13,4 @@
 
         ScrollView:
             MDList:
-                id: customer_shopping_history_list
+                id: customer_history_list
